# cooking

./: .gitignore  config-git.sh
architecture/micro/dubbo-example/: .gitignore  pom.xml  run.sh
architecture/micro/dubbo-example/dubbo-example-client/: pom.xml  run.sh
architecture/micro/dubbo-example/dubbo-example-common/: build.sh  pom.xml
architecture/micro/dubbo-example/dubbo-example-server/: pom.xml  run.sh
architecture/micro/dubbo-example/thrift-service-cpp/: .gitignore  CMakeLists.txt  README.md
architecture/micro/dubbo-example/thrift-service-cpp/include/gen-cpp/: UerService.cpp  UerService.h  UerService_server.skeleton.cpp  User_constants.cpp  User_constants.h  User_types.cpp  User_types.h
architecture/micro/dubbo-example/thrift-service-cpp/src/: server.cpp  server_consul.cpp
architecture/micro/dubbo-example/thrift-service-cpp/thrid/: install.sh
architecture/micro/spring-cloud-example/: pom.xml
architecture/micro/spring-cloud-example/demo-server/: pom.xml
architecture/rpc/thrift/cpp/: .gitignore  CMakeLists.txt  README.md  gen-thrift
architecture/rpc/thrift/cpp/src/: main.cpp
architecture/rpc/thrift/cpp/src/client/: client.cpp
architecture/rpc/thrift/cpp/src/server/: server.cpp
architecture/rpc/thrift/cpp/third/: install.sh
architecture/rpc/thrift/cpp/thrift/gen-cpp/: Calculator.cpp  Calculator.h  Calculator_server.skeleton.cpp  SharedService.cpp  SharedService.h  SharedService_server.skeleton.cpp  shared_constants.cpp  shared_constants.h  shared_types.cpp  shared_types.h  tutorial_constants.cpp  tutorial_constants.h  tutorial_types.cpp  tutorial_types.h
architecture/rpc/thrift/java/: pom.xml  run.sh
architecture/search/lucene-demo/: run-demo.sh  run-search.sh
benchmark/map-benchmark/: RES.md
benchmark/map-benchmark/nark-hashmap/samples/: Makefile  easy_use  easy_use.cpp
benchmark/map-benchmark/sparsehash/: .gitignore  Makefile  Makefile.in  aclocal.m4  config.status  configure  libc_allocator_with_realloc_test  simple_test  sparsetable_unittest  template_util_unittest  time_hash_map  type_traits_unittest
benchmark/map-benchmark/sparsehash/.deps/: hashtable_test.Po  libc_allocator_with_realloc_test.Po  simple_compat_test.Po  simple_test.Po  sparsetable_unittest.Po  template_util_unittest.Po  time_hash_map-time_hash_map.Po  type_traits_unittest.Po
benchmark/map-benchmark/sparsehash/res/: analysis.py  res.tar
benchmark/map-benchmark/sparsehash/src/: time_hash_map.cc
benchmark/rocksdb-benchmark/: pom.xml  run.sh
c++/seastar/: build.sh
c++/seastar/src/: server.cpp
c++/universal/: CMakeLists.txt  build-run  build.sh
c++/universal/cmds/: brpc_echo.cmd
c++/universal/include/brpc/: flags.h
c++/universal/scripts/: brpc_echo_run.sh
c++/universal/src/: main.cpp
c++/universal/src/brpc/: brpc_echo_service.cpp  flags.cpp  thrift_server.cpp
c++/universal/src/gflags/: gflags_test_bar.cpp
c++/universal/third/: .gitignore  install.sh  requirements.md  tools.sh
c++/universal/thrift/: echo.thrift
c++/universal/thrift/gen-cpp/: EchoService.cpp  echo_constants.cpp
java/cook-java/: pom.xml
java/cook-java/cook-base/: pom.xml
java/cook-java/cook-dubbo/: pom.xml
java/cook-java/cook-esper/: pom.xml
java/cook-java/cook-spring-cloud-alibaba/cook-spring-cloud-alibaba-provider/: pom.xml
java/cook-java/cook-spring-cloud-alibaba/cook-spring-cloud-alibaba-thrift/: pom.xml
java/cook-java/cook-spring-cloud-consumer/: pom.xml
java/cook-java/cook-springboot/: pom.xml
js/antd-app/src/: App.js
js/antd-app/src/pages/: upload.js
kotlin/cook-kotlin/: build.gradle.kts  settings.gradle.kts
langs/c++/cook-cmake/: CMakeLists.txt  library.h
langs/c++/cook-cmake/cmakes/: include-sub.cmake  include.cmake  test-function.cmake  test-function2.cmake
langs/c++/cook-cmake/cmakes/spdlog/: CMakeLists.txt
langs/c++/cook-vcpkg/: CMakeLists.txt  README.md  vcpkg.json
langs/c++/cook-vcpkg/src/: main.cpp
langs/c++/sample-cpp/: CMakeLists.txt
langs/c++/sample-cpp/cmakes/: sample.cmake
langs/c++/seastar/: README.md
langs/c++/seastar/src/: client.cpp
langs/c++/section-00/: CMakeLists.txt  bar.cpp  bar.h  common.cpp  common.h  foo.cpp  foo.h  main.cpp
langs/c++/simple-project/: CMakeLists.txt  main.cpp
langs/c++/universal/: CMakeLists.txt  deps  gen-thrift
langs/c++/universal/cmds/: gflags_test.cmd
langs/c++/universal/include/brpc/: flags.h
langs/c++/universal/scripts/: brpc_echo_service.sh  gflags_test.sh  universal.sh
langs/c++/universal/src/brpc/: brpc_echo_service.cpp  flags.cpp  thrift_server.cpp
langs/c++/universal/src/compiler/fb/: README.md  flex-compile.sh  flex-wc.sh
langs/c++/universal/src/compiler/fb/cal/: Makefile  cal-basic.l  cal.l  cal.output  cal.tab.c  cal.tab.h  cal.y  calc  lex.yy.c
langs/c++/universal/src/compiler/fb/dsl/: README.md  driver.cpp  driver.h  dsl.l
langs/c++/universal/src/compiler/fb/wc/: Makefile  lex.yy.c  wc  wc-file  wc-file.l  wc.in  wc.l
langs/c++/universal/src/compiler/fb/wc2/: CMakeLists.txt  Makefile  README.md  driver.cpp  driver.hpp  lexer.l  lexer.yy.cc  location.hh  main.cpp  parser.output  parser.tab.cc  parser.tab.hh  parser.yy  scanner.h  scanner.hpp  wc.in
langs/c++/universal/src/ms/: .mk.out  ms.cpp  ms2.cpp  ms3.cpp
langs/c++/universal/third/: install.sh
langs/c++/universal/thrift/gen-cpp/: EchoService.h  EchoService_server.skeleton.cpp  echo_constants.h  echo_types.cpp  echo_types.h
langs/java/cook-java/: .gitignore  pom.xml
langs/java/cook-java/cook-antlr/: pom.xml
langs/java/cook-rpc/: pom.xml
langs/js/: test-util.mjs  util.mjs
langs/js/antd-app/: .eslintcache  package.json
langs/js/native/: Makefile  jsencrypt.html  sample.thrift  thrift.html
langs/kotlin/cook-kotlin/: build.gradle  settings.gradle
langs/kotlin/examples/: hello.kt
langs/nodejs/egg-example/: package.json
langs/python/cook-fastapi/: gunicorn.conf.py  log.ini  main.py  ninja.py  registry.py  registry_v2.py  registry_v3.py  requirements  run.sh
langs/python/cook-python/: .gitignore  main.py
langs/python/cook-tornado/: main.py
langs/scala/cook-scala/: pom.xml
(+381 files in other folders)
